--- a/services/advertisiment-service/package.json
+++ b/services/advertisiment-service/package.json
@@ -7,9 +7,9 @@
     "start": "nodemon --watch 'src/**/*.ts' --exec \\\"ts-node\\\" index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "advertisiment-service-framework": "^1.0.2"
-  },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "advertisiment-service-framework": "^1.0.13"
+  }
 }
