close connection when it's unneeded

--- a/services/advertisiment-service/package.json
+++ b/services/advertisiment-service/package.json
@@ -10,6 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "advertisiment-service-framework": "^1.0.24"
+    "advertisiment-service-framework": "1.0.33"
   }
 }
