--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "advertisiment",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start-frontend": "cd frontend && npm run frontend-react-start",
+    "start-backend": "cd backend && npm run start",
+    "start-service": "cd services/advertisiment-service && npm run start"
   },
   "dependencies": {
     "@koa/cors": "^3.4.1",
