--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "inversify": "^5.0.1",
     "moment": "^2.24.0",
     "mysql2": "^2.3.3",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.21.4"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -24,7 +25,8 @@
     "nodemon": "1.19.4",
     "ts-node": "^10.2.1",
     "tslint": "^5.16.0",
-    "typescript": "3.7"
+    "typescript": "3.7",
+    "@types/sequelize": "^4.28.14"
   },
   "author": "",
   "license": "ISC"
